# Matchr.pl

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  Rocket.toml  minneapolis_2021_mayoral_candidates.txt  minnesota_governor_race_2022.txt
backend/src/: cors.rs  main.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.jsx  index.js  index.jsx
frontend/src/component/: Landing.jsx  Logo.js  Match.jsx  Swipe.jsx  UseSticky.jsx
frontend/src/util/: global.js  profile.js
my-app/: package-lock.json
scripts/: setupMongo.py
scripts/candidates/: booba  de986e7c-4d29-41f0-880f-add372170323  jacobfrey  jacobfrey.txt  kateknuth  kateknuth.txt
scripts/elections/: 72ff8a12-6460-4059-9836-d2d86a091c02
