[package]
name = "backend"
version = "0.1.0"
edition = "2021"
address = "0.0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
mongodb = "2.3.1"
serde = "1.0.136"
rand = "0.8.5"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["mongodb"]
